zeit.cms changes
================

0.10 (unreleased)
-----------------


0.9.11 (2008-04-28)
-------------------

- Selten gebrauchte Aktionen in ein DropDown verschoben (derzeit umbenennen und
  löschen).
- Einige Menu-Titel wurden nicht übersetzt (bug #4115)
- Unterstützung für alte Channels mit body/container (bug #4109).
- Favicon im CMS jetzt mit rosa Hintergrund zur besseren Unterscheidung (bug
  #4127).
- Objekte können jetzt kopiert werden: Aktion auf Ordnern bei der man das zu
  kopierende Objekt aus dem Clipboard wählt (bug #4130).
- Breadcrumbs sind wieder draggable.
- Keine freie Eingabe von Keywords mehr (bug #4120).
- Doppelte Eingabe von Keywords nicht mehr möglich (bug #4119).
- Liste der Keywords bei Typeahead ist jetzt sortiert.

0.9.10 (2008-04-22)
-------------------

- Droppen von Objekten in einen Channel führt nicht mehr zum JS-Fehler (sondern
  zu einer richtigen Fehlermeldung), bug #4094.
- Horizontales scrollen in der Dateiliste erlaubt, wenn die Tabelle zu breit
  wird.
- Channel haben jetzt <channel> als Root-Tag (bug #4109).
- Relateds werden jetzt bei der Syndizierung mit eingefügt (bug #4106).
- Asset-Bearbeiten/Anzeigen-Seite produzierte einen Systemfehler, wenn es
  artbox_info als Property gab, diese aber leer war oder einen ungültigen Wert
  hatte (bug #4124)
- Formlayout bei geringer Breite nicht mehr zerpflückt (bug #4118).
- Homepage-Teaser hinzugefügt (bug #4122).
- Related werden jetzt mit Kurzteaser und HP-Teaser eingebettet.
- Factored out zeit.ldap into its own package.
- Im Workflowtab werden Statusänderungen jetzt als Log angezeigt (bug #4121).

0.9.9 (2008-04-14)
------------------

- Veraltete Einträge im Funktions-/Methodencache werden jetzt alle 100 Requests
  entfernt.
- Im Channel werden die Treffer/Hits (today.xml) des jeweiligen Dokuments
  angezeigt (bug #4093).
- Bildergalerie: Layout kann pro Bild eingestellt werden (bug #4048).
- Bildergallerie bei Artikel referenzieren (bug #4052).